crates/swc_ecma_parser/tests/test262-error-references/fail/a38011d2c010999e.js.stderr
error: assignment property is invalid syntax
 --> $DIR/tests/test262-parser/fail/a38011d2c010999e.js:1:6
  |
1 | for({a=0};;);
  |      ^^^

